<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Light_1"
    tools:context=".Views.Login.SignInPasswordActivity"
    style="@style/SCREEN"
    >

    <ImageView

        android:id="@+id/btnBack"
        style="@style/BUTTON_BACK"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"


        android:layout_marginStart="27dp"
        android:layout_marginTop="63dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        style="@style/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="264dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/frame_1"
        android:layout_width="344dp"
        android:layout_height="152dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/frame_2"
            android:layout_width="342dp"
            android:layout_height="56dp"
            android:background="@color/Bg_Light_2"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/password"
                style="@style/hint"
                android:layout_width="342dp"
                android:layout_height="56dp"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/password" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/frame_2"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnContinue_2"
                style="@style/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/btn_continue" />
        </RelativeLayout>

        <TextView
            android:id="@+id/dont_have_a"
            style="@style/dont_have_a"
            android:layout_width="183dp"
            android:layout_height="15dp"
            android:layout_below="@id/frame_3"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_pass" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>