<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Login.SignInActivity"
    android:background="@color/Bg_Light_1">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="264dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/sign_in"
        style="@style/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/frame_1"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/frame_2"
            android:layout_width="342dp"
            android:layout_height="56dp"
            android:background="@color/Bg_Light_2"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="342dp"
                android:layout_height="56dp"
                android:layout_marginLeft="12dp"
                android:hint="@string/email_address"
                android:background="@android:color/transparent"
                style="@style/hint"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/frame_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/frame_2"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                style="@style/btn_continue"
                android:backgroundTint="@color/purple"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/dont_have_a"
            android:layout_width="183dp"
            android:layout_height="15dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/frame_3"
            android:text="@string/dont_have_account"
            style="@style/dont_have_a" />
    </RelativeLayout>
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="413dp"
        android:layout_marginEnd="23dp"
        android:text="Continue With Google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/Bg_Light_2"
        android:textColor="@color/Black_100"/>

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="23dp"
        android:text="Continue With Facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/Bg_Light_2"
        android:textColor="@color/Black_100"/>
</androidx.constraintlayout.widget.ConstraintLayout>